@@ -1,6 +1,6 @@
 dnl YAZ Toolkit, Index Data 1994-2004
 dnl See the file LICENSE for details.
-dnl $Id: configure.in,v 1.137 2004-04-28 22:44:58 adam Exp $
+dnl $Id: configure.in,v 1.138 2004-04-30 19:34:05 adam Exp $
 AC_INIT(include/yaz/yaz-version.h)
 AM_INIT_AUTOMAKE(yaz, 2.0.19)
 AM_MAINTAINER_MODE
@@ -17,74 +17,7 @@ AM_DISABLE_SHARED
 AM_PROG_LIBTOOL
 AC_PATH_PROG(pkgconfig, pkg-config, NONE)
 dnl
-dnl ----- DOCBOOK DTD
-AC_SUBST(DTD_DIR)
-AC_ARG_WITH(dtd, [  --with-dtd[=DIR]        use docbookx.dtd in DIR],
-[
-   if test -f "$withval/docbookx.dtd"; then
-      DTD_DIR=$withval
-   fi
-],[
-   AC_MSG_CHECKING(for docbookx.dtd)
-   for d in /usr/share/sgml/docbook/dtd/xml/4.1.2 \
-         /usr/share/sgml/docbook/xml-dtd-4.1.2* \
-         /usr/share/sgml/docbook/xml-dtd-4.1 \
-         /usr/share/sgml/docbook/dtd/xml/4.0 \
-	    /usr/lib/sgml/dtd/docbook-xml 
-   do
-     if test -f $d/docbookx.dtd; then
-       AC_MSG_RESULT($d)
-       DTD_DIR=$d
-       break
-     fi
-   done
-   if test -z "$DTD_DIR"; then
-      AC_MSG_RESULT(Not found)
-   fi
-])
-AC_SUBST(DSSSL_DIR)
-AC_ARG_WITH(dsssl,[  --with-dsssl[=DIR]      use Docbook DSSSL in DIR/{html,print}/docbook.dsl],
-[
-   if test -f "$withval/html/docbook.dsl"; then
-      DSSSL_DIR=$withval
-   fi
-],[
-   AC_MSG_CHECKING(for docbook.dsl)
-   for d in /usr/share/sgml/docbook/stylesheet/dsssl/modular \
-            /usr/share/sgml/docbook/dsssl-stylesheets-1.* \
-            /usr/lib/sgml/stylesheet/dsssl/docbook/nwalsh 
-   do
-     if test -f $d/html/docbook.dsl; then
-       AC_MSG_RESULT($d)
-       DSSSL_DIR=$d
-       break
-     fi
-   done
-   if test -z "$DSSSL_DIR"; then
-      AC_MSG_RESULT(Not found)
-   fi
-])
-AC_SUBST(XSL_DIR)
-AC_ARG_WITH(xsl,[  --with-xsl[=DIR]        use Docbook XSL in DIR/{htmlhelp,xhtml}],
-[
-   if test -f "$withval/htmlhelp/htmlhelp.xsl"; then
-      XSL_DIR=$withval
-   fi
-],[
-   AC_MSG_CHECKING(for htmlhelp.xsl)
-   for d in /usr/share/sgml/docbook/stylesheet/xsl/nwalsh \
-            /usr/share/sgml/docbook/xsl-stylesheets-1.* 
-   do
-     if test -f $d/htmlhelp/htmlhelp.xsl; then
-       AC_MSG_RESULT($d)
-       XSL_DIR=$d
-       break
-     fi
-   done
-   if test -z "$XSL_DIR"; then
-      AC_MSG_RESULT(Not found)
-   fi
-])
+YAZ_DOC
 dnl 
 dnl ----- Sockets
 checkBoth=0
