@@ -1,5 +1,7 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+Add autoconf m4 macro YAZ_DOC for YAZ documentation setup (docbook).
+
 SSL comstack now uses yaz.pem certificate file on server side
 by default. Certificate filename can be configured by calling
 comstack function cs_set_ssl_cert before cs_bind is used.
